[FEAT] Add Presentation layer for detail and list screen

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">Satellite Info</string>
+    <string name="search">Search</string>
+    <string name="cost">Cost:</string>
+    <string name="height_mass">Height/Mass:</string>
+    <string name="last_position">Last Position:</string>
 </resources>
